tests/loners/loners.exp
Error ----------------------------------------------------------- loners.js:2:11

Error: loners.js:2
  2: var z = o.z;
               ^ Cannot get `o.z` because property `z` is missing in object literal [1].
  References:
    1: var o = { x: 5, y: "jello" };
               ^^^^^^^^^^^^^^^^^^^^ [1]: object literal


Found 1 error
